# CauST

./: .gitignore  COMMANDS.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
caust/: __init__.py  pipeline.py
caust/causal/: __init__.py  intervention.py  invariance.py  scorer.py
caust/data/: __init__.py  graph.py  loader.py
caust/evaluate/: __init__.py  metrics.py
caust/filter/: __init__.py  gene_filter.py
caust/models/: __init__.py  autoencoder.py  stagate_wrapper.py
caust/visualize/: __init__.py  plots.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst  tutorials.rst
experiments/configs/: ablation_study.yaml  all_datasets.yaml  dlpfc_caust_stagate.yaml  dlpfc_multi_slice_caust.yaml  dlpfc_single_slice.yaml  mousebrain_caust_stagate.yaml
experiments/results/benchmark/: all_results.csv
experiments/results/multi_slice/: aggregate_summary.json  cross_slice_ari.json  invariance_scores.json  lodo_metrics.csv  per_slice_metrics.csv
experiments/results/single_slice/: 151507_metrics.json  P4_rep1_metrics.json
scripts/: 01_download_data.py  02_preprocess.py  03_train_single_slice.py  04_run_multi_slice.py  05_benchmark.py  06_visualize_results.py  download_spatiallbd.py  get_dlpfc.py
tests/: test_filter.py  test_intervention.py  test_loader.py  test_metrics.py  test_pipeline.py  test_scorer.py
tutorials/: 01_quickstart.ipynb  02_custom_data.ipynb  03_integration_STAGATE.ipynb  04_cross_slice_evaluation.ipynb  05_causal_gene_exploration.ipynb
tutorials/output/: README.md  causal_gene_scores.csv
